docs/rdpvcbridge/versions/2.0.0/index.md
---
layout: page
title: Horizon RDP VC Bridge SDK v2.0
hide:
  #- navigation
  - toc
---

VMware RDP VC Bridge SDK allows partners to write Windows applications that can load plugins on the View client and communicate with them over a PCoIP virtual channel, using Microsoft's "de facto standard" RDP WTS APIs.

One use case is that it can be used to help the partners integrate and feed information from stand alone medical devices such as ECG and such through a virtual desktop to the private cloud.

This SDK is free and public. To obtain technical support for the use of the SDK, Paid Development Consulting is available on request. Please contact us at [Horizon-View-RDPVCBridge-SDK-Support@vmware.com](Horizon-View-RDPVCBridge-SDK-Support@vmware.com) for more information.

## Downloads

By downloading, installing, or using the Software, you agree to be bound by the terms of [VMware’s Software Development Kit License Agreement]() unless there is a different license provided in or specifically referenced by the downloaded file or package. If you disagree with any terms of the agreement, then do not use the Software.

| Name | Version | Size | MD5 |   |
| --- | --- | --- | --- | --- |
| RDP VC Bridge SDK | 2.0 | 10.9 MB |  | [Download](https://my.vmware.com/group/vmware/get-download?downloadGroup=VIEWRDPVC_BRIDGE_2.0) { .md-button .md-button--primary }  |

## Documentation and Reference

| Name | Size |
| --- | --- |
| OSS @span |   |
| [open_source_license RDP VC Bridge 2.0.0](https://my.vmware.com/group/vmware/get-download?downloadGroup=VIEWRDPVC_BRIDGE_2.0_OSS) | 8.4 KB |
