docs/rdpvcbridge/versions/3.3.0/index.md
---
layout: page
title: Horizon RDP VC Bridge SDK
#permalink: /sdks/horizon/rdpvcbridge
hide:
  #- navigation
  - toc
---

## RDP VC Bridge

VMware RDP VC Bridge SDK allows partners to write Windows applications that can load plugins on the Horizon Client and communicate with them over a Horizon virtual channel, using Microsoft's "de facto standard" RDP WTS APIs.

One use case is that it can be used to help the partners integrate and feed information from stand alone medical devices such as ECG and such through a virtual desktop to the private cloud.

This SDK is free and public. To obtain technical support for the use of the SDK, Paid Development Consulting is available on request. Please contact us at [Horizon-View-RDPVCBridge-SDK-Support@vmware.com](mailto:Horizon-View-RDPVCBridge-SDK-Support@vmware.com) for more information.

## Downloads

By downloading, installing, or using the Software, you agree to be bound by the terms of [Omnissa Software Development Kit License Agreement](https://developer.omnissa.com/eula/14056) unless there is a different license provided in or specifically referenced by the downloaded file or package. If you disagree with any terms of the agreement, then do not use the Software.

| Name | Version | Size | MD5|  |
| --- | --- | --- | --- | --- |
| RDP VC Bridge | 3.3.0 | 36.3 KB | 8159599cf07d880c468a6fe206825ec2 | [Download](VMware-rdpvcbridge-sdk-18347885.zip) 

!!! Todo
    Question: should we download the older versions and store them in this repo? I think yes. The links to the other versions are within the versions folder index.html

## Documentation and Reference

| Name | Size	|
| --- | --- |
| Development Guides |  |
| [VMware Horizon RDP Virtual Channel Bridge SDK Programming Guide](horizon-RDP-virtual-channel-bridge-SDK-33-programming-guide.pdf) | 523.9 KB |
